修改成自己的主题

--- a/404.html
+++ b/404.html
@@ -91,6 +91,7 @@
     </ul>
 </div>
 
+
             <a rel="nofollow" href="https://allen-lulu.github.io/" class="index404">回首页看看</a>
         </section>
     </div>
@@ -107,7 +108,7 @@
             <a href="https://gohugo.io/" target="_black" rel="nofollow"><span class="badge-subject">Powered by</span><span class="badge-value bg-blue">Hugo</span></a>
         </div>
         <div class="github-badge">
-            <a href="https://www.flysnow.org/" target="_black"><span class="badge-subject">Design by</span><span class="badge-value bg-brightgreen">飞雪无情</span></a>
+            <a href="https://www.allen-lulu.github.io/" target="_black"><span class="badge-subject">Design by</span><span class="badge-value bg-brightgreen">游鱼</span></a>
         </div>
         <div class="github-badge">
             <a href="https://github.com/flysnow-org/maupassant-hugo" target="_black"><span class="badge-subject">Theme</span><span class="badge-value bg-yellowgreen">Maupassant</span></a>
@@ -125,6 +126,7 @@
 
 
     <script src='/js/douban.js'></script>
+
 
                 </div>
 
@@ -163,6 +165,7 @@
 <div class="tagcloud">
     
 </div>
+
     </section>
 
     
